Refactored code to delegate Base64 encoding to either java.util.Base64 or javax.xml.bind.DatatypeConverter depending on the running JVM version. (#698)
Signed-off-by: Doug Hoard <doug.hoard@gmail.com>