@@ -3,7 +3,6 @@ package io.prometheus.client.exporter;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
-import javax.xml.bind.DatatypeConverter;
 
 public class BasicAuthHttpConnectionFactory implements HttpConnectionFactory {
     private final HttpConnectionFactory originConnectionFactory;
@@ -28,7 +27,7 @@ public class BasicAuthHttpConnectionFactory implements HttpConnectionFactory {
     private String encode(String user, String password) {
         try {
             byte[] credentialsBytes = (user + ":" + password).getBytes("UTF-8");
-            String encoded = DatatypeConverter.printBase64Binary(credentialsBytes);
+            String encoded = Base64.encodeToString(credentialsBytes);
             return String.format("Basic %s", encoded);
         } catch (UnsupportedEncodingException e) {
             throw new IllegalArgumentException(e);
